[package]
name = "mslive"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
env_logger = "0.10"
rand = "0.8"
itertools = "0.10"
egui = { version = "0.23", default-features = false }
eframe = { version = "0.23", default-features = false, features = ["x11"] }

stagebridge = { git = "https://github.com/foltik/stagebridge", branch = "main" }
